Fix missed copyright date change from bug 394821 (see comment 18). sr=smorgan